[package]
name = "interval_future"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
description = "Wraps a synchronous, waker-less polling function in an interval-based future"
edition = "2018"
repository = "https://github.com/oxidecomputer/interval_future"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.3", features = [ "full" ] }
